--- a/SwissTransportApp/SwissTransportApp.csproj
+++ b/SwissTransportApp/SwissTransportApp.csproj
@@ -134,7 +134,9 @@
       <Name>SwissTransport</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\map.png" />
+  </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
       <Visible>False</Visible>
@@ -148,13 +150,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\568635131536669843-512 %282%29.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\Image1.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\swiss-alps-snow-covered-mountains-glacier-switzerland-3840x2160-2443 %282%29.jpg" />
+    <None Include="Resources\map_ico.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
