--- a/SwissTransportApp/SwissTransportApp.csproj
+++ b/SwissTransportApp/SwissTransportApp.csproj
@@ -100,6 +100,13 @@
     <Compile Include="ConnectionForm.Designer.cs">
       <DependentUpon>ConnectionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GoogleMaps.cs" />
+    <Compile Include="GoogleMapsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GoogleMapsForm.Designer.cs">
+      <DependentUpon>GoogleMapsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="OnlineFahrplanForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +117,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ConnectionForm.resx">
       <DependentUpon>ConnectionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GoogleMapsForm.resx">
+      <DependentUpon>GoogleMapsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OnlineFahrplanForm.resx">
       <DependentUpon>OnlineFahrplanForm.cs</DependentUpon>
@@ -124,6 +134,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
